--- a/ISSUE_TEMPLATE/bug_report.yml
+++ b/ISSUE_TEMPLATE/bug_report.yml
@@ -1,91 +1,107 @@
-name: Bug report
-description: Create a report to help us improve
+name: 🐛 Bug Report
+description: File a bug report to help us improve
 title: "[Bug]: "
-labels: ["bug"]
+labels: ["bug", "triage"]
+assignees:
+  - rekise
 body:
   - type: markdown
     attributes:
       value: |
-        Thanks for taking the time to fill out this bug report!
+        Thanks for taking the time to fill out this bug report! Please provide as much detail as possible.
+  
   - type: textarea
-    id: what-happened
+    id: description
     attributes:
-      label: Description
+      label: Bug Description
       description: A clear and concise description of what the bug is.
-      placeholder: Tell us what you see!
+      placeholder: Tell us what happened...
     validations:
       required: true
+  
   - type: textarea
     id: reproduce
     attributes:
-      label: To Reproduce
-      description: Steps to reproduce the behavior
+      label: Steps to Reproduce
+      description: Please provide detailed steps to reproduce the behavior
       placeholder: |
-        1. Launch commands ...
-        2. Click on '....'
-        3. Scroll down to '....'
-        4. See error
+        1. Launch command: `roslaunch ...`
+        2. Execute: `...`
+        3. Observe: `...`
+        4. See error: `...`
     validations:
       required: true
+  
   - type: textarea
     id: expected
     attributes:
-      label: Expected behavior
-      description: A clear and concise description of what you expected to happen.
+      label: Expected Behavior
+      description: A clear description of what you expected to happen
+      placeholder: What should have happened instead?
     validations:
       required: true
+  
   - type: textarea
     id: screenshots
     attributes:
-      label: Screenshots
-      description: If applicable, add screenshots to help explain your problem.
+      label: Screenshots/Videos
+      description: If applicable, add screenshots or videos to help explain the problem
+      placeholder: Drag and drop images here or paste links
+  
   - type: dropdown
-    id: desktop
+    id: platform
     attributes:
-      label: Desktop Platform
-      description: What desktop OS are you using?
+      label: Platform
+      description: What platform are you running on?
       options:
-        - Ubuntu 22.04.5 LTS
+        - Ubuntu 22.04 LTS
         - Ubuntu 20.04 LTS
         - Ubuntu 18.04 LTS
-        - Windows 10
-        - Windows 11
+        - Windows 10/11
         - macOS
-        - Other (please specify in additional context)
+        - Docker Container
+        - Other (specify in additional context)
     validations:
       required: true
+  
   - type: input
-    id: docker
+    id: docker-image
     attributes:
-      label: Docker Image
-      description: If using Docker, specify the image name and tag
-      placeholder: "e.g., ros:noetic, osrf/ros:melodic-desktop"
+      label: Docker Image (if applicable)
+      description: Specify the Docker image name and tag
+      placeholder: "e.g., ros:noetic-desktop-full, osrf/ros:melodic"
+  
   - type: textarea
     id: hardware
     attributes:
-      label: Hardware tested on
-      description: Specify the hardware platform where the issue was observed
-      placeholder: "e.g., Intel NUC, Raspberry Pi 4, NVIDIA Jetson Nano"
-  - type: textarea
-    id: repository
+      label: Hardware
+      description: Hardware platform where the issue occurred
+      placeholder: "e.g., Intel NUC, Raspberry Pi 4, NVIDIA Jetson Nano, Custom PC"
+  
+  - type: input
+    id: repository-info
     attributes:
-      label: Repository
-      description: Repository/branch details on which issue was observed
-      placeholder: "e.g., main branch, commit hash: abc123"
+      label: Repository/Branch
+      description: Which repository and branch were you using?
+      placeholder: "e.g., main branch, commit abc123, tag v1.2.3"
     validations:
       required: true
+  
   - type: textarea
     id: logs
     attributes:
-      label: Logs
-      description: Please provide relevant logs
+      label: Logs and Additional Files
+      description: Please attach relevant logs, rosbags, or other files
       placeholder: |
-        - rosbag file: 
-        - backtrace/console log:
-        - kernel log:
+        - ROS bag file: [attach or provide link]
+        - Console/terminal output: [paste or attach]
+        - Kernel logs (if hardware related): [paste or attach]
+        - Stack trace/backtrace: [paste here]
       render: shell
+  
   - type: textarea
     id: additional-context
     attributes:
-      label: Additional context
-      description: Add any other context about the problem here.
+      label: Additional Context
+      description: Add any other context, workarounds, or related issues
+      placeholder: Any additional information that might help us understand the problem
