--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,3 +9,4 @@ repos:
       - id: clang-format
         args: ['--style=file']
         types_or: [c++, c]
+        exclude: ^(build/|install/|log/)
